--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,11 +5,11 @@
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(30, 30, 46, 0.2);
 }
 
 window#waybar > * {
-	margin-top: 5px;
+    margin-top: 5px;
 }
 
 tooltip,
@@ -28,17 +28,19 @@ tooltip,
 	background-color: #11111b;
     color: #cdd6f4;
 	border-radius: 10px;
+    box-shadow: inset 0 -2px #b4befe;
 }
 
 #custom-arch_menu {
+    background-color: #b4befe;
 	font-size: 15px;
 	padding-left: 6px;
 	margin-left: 0px;
-	color: #1793D1;
+	color: #11111b;
 }
 
 #custom-arch_menu:hover {
-	color: #cdd6f4;
+    color: #1793D1;
 }
 
 #workspaces {
@@ -49,6 +51,7 @@ tooltip,
 #workspaces button {
     padding: 0 5px;
     background-color: transparent;
+    box-shadow: none;
 }
 
 #workspaces button:hover {
@@ -59,7 +62,7 @@ tooltip,
 
 #workspaces button.active {
 	color: #11111b; 
-	background-color: #cdd6f4;
+	background-color: #b4befe;
 	border-radius: 7px;
 }
 
@@ -85,6 +88,7 @@ tooltip,
 #cpu, #memory, #disk{
 	background-color: transparent;
 	padding: 0 4px;
+    box-shadow: none;
 }
 
 #cpu {
